# StudyProjects

./: notebook6e2677259e.ipynb  video_nba.ipynb  whisper_large_v2_ru.ipynb
labwork3-Pzof1/: CMakeLists.txt  README.md  main.cpp
labwork3-Pzof1/libraries/bmp/: bmp.cpp  bmp.h
labwork3-Pzof1/libraries/data-storage/: data-storage.cpp  data-storage.h
labwork3-Pzof1/libraries/other-functions/: other-functions.cpp  other-functions.h
labwork3-Pzof1/libraries/parser/: parser.cpp  parser.h
labwork4-Pzof1/: README.md
labwork4-Pzof1/lib/: ArgParser.cpp  ArgParser.h
labwork4-Pzof1/tests/: argparser_test.cpp
labwork5-Pzof1/: CMakeLists.txt  README.md
labwork5-Pzof1/lib/: Arr17.cpp  Arr17.h  CMakeLists.txt
labwork5-Pzof1/tests/: Arr17_test.cpp  CMakeLists.txt
